--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "standard-formatter",
   "main": "./lib/standard-formatter",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Format file contents using JavaScript Standard Style",
   "keywords": [
     "javascript",
@@ -9,7 +9,9 @@
     "formatter"
   ],
   "activationCommands": {
-    "atom-workspace": ["standard-formatter:format"]
+    "atom-workspace": [
+      "standard-formatter:format"
+    ]
   },
   "repository": "https://github.com/stephenkubovic/atom-standard-formatter",
   "license": "MIT",
