--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "find-root": "^0.1.1",
+    "happiness-format": "^1.0.0",
     "minimatch": "^2.0.8",
     "pkg-config": "^1.1.0",
     "semistandard-format": "^1.4.0",
