--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "pkg-config": "^1.1.0",
     "semistandard-format": "^1.6.5",
     "standard-format": "^1.6.6"
+  },
+  "devDependencies": {
+    "standard": "^5.3.1"
   }
 }
