--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "atom": ">=0.174.0 <2.0.0"
   },
   "dependencies": {
+    "deasync": "^0.1.7",
     "find-root": "^0.1.1",
     "happiness-format": "^1.1.0",
+    "loophole": "^1.1.0",
     "minimatch": "^2.0.10",
     "pkg-config": "^1.1.0",
     "semistandard-format": "^3.0.0",
