--- a/package.json
+++ b/package.json
@@ -22,9 +22,8 @@
     "minimatch": "^2.0.10",
     "pkg-config": "^1.1.0",
     "semistandard-format": "^3.0.0",
+    "standard": "^5.4.1",
     "standard-format": "^2.2.3"
   },
-  "devDependencies": {
-    "standard": "^5.3.1"
-  }
+  "devDependencies": {}
 }
